--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -8,7 +8,11 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
-      
+       # The BuildTools version used by your project
+      - build-tools-26.0.2
+
+       # The SDK version used to compile your project
+      - android-26
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
