--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -6,16 +6,24 @@ version: 2
 jobs:
   build:
     docker:
+      language: android
+      android:
+        components:
+        # Uncomment the lines below if you want to
+        # use the latest revision of Android SDK Tools
+         - tools
+         - platform-tools
+
+        # The BuildTools version used by your project
+        - build-tools-26.0.2
+
+        # The SDK version used to compile your project
+        - android-26
+      
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
-      - tools
-      - platform-tools 
-       
-       # The BuildTools version used by your project
-      - build-tools-26.0.1
-
-       # The SDK version used to compile your project
-      - android-26
+      
+     
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
