--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -6,19 +6,13 @@ version: 2
 jobs:
   build:
     docker:
-      language: android
-      android:
-        components:
+
         # Uncomment the lines below if you want to
         # use the latest revision of Android SDK Tools
-         - tools
-         - platform-tools
-
-        # The BuildTools version used by your project
-        - build-tools-26.0.2
+        - image: build-tools:26.0.1
 
         # The SDK version used to compile your project
-        - android-26
+        - image: android:26
       
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
