--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -12,7 +12,7 @@ jobs:
         - image: build-tools:26.0.1
 
         # The SDK version used to compile your project
-        - image: android:26
+        - image: circleci/android:26
       
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
