--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -6,46 +6,12 @@ version: 2
 jobs:
   build:
     docker:
-
-        # Uncomment the lines below if you want to
-        # use the latest revision of Android SDK Tools
-        - image: build-tools:26.0.1
-
-        # The SDK version used to compile your project
-        - image: circleci/android:26
-      
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/android:api-27-node8-alpha
       
-     
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
     working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
     
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "build.gradle" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: gradle dependencies
-
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle" }}
-        
-      # run tests!
-      - run: gradle test
+      - run: bundle install
