--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -5,9 +5,10 @@
 version: 2
 jobs:
   build:
-    docker:
+    machine: true
+    #docker:
       # specify the version you desire here
-      - image: circleci/android
+      #- image: circleci/android
       
     working_directory: ~/repo
     steps:
