--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -5,7 +5,8 @@
 version: 2
 jobs:
   build:
-    machine: true
+    machine:
+      image: circleci/classic:201708-01
     #docker:
       # specify the version you desire here
       #- image: circleci/android
