--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -4,12 +4,10 @@
 #
 version: 2
 jobs:
-  build:
-    machine:
-      image: circleci/classic:201708-01
-    #docker:
+  build: 
+    docker:
       # specify the version you desire here
-      #- image: circleci/android
+      - image: circleci/android
       
     working_directory: ~/repo
     steps:
