--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -7,7 +7,7 @@ jobs:
   build: 
     docker:
       # specify the version you desire here
-      - image: circleci/android
+      - image: circleci/android:api-25-alpha
       
     working_directory: ~/repo
     steps:
