--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -7,13 +7,13 @@ jobs:
   build: 
     docker:
       # specify the version you desire here
-      - image: circleci/android:api-25-alpha
+      - image: circleci/android:api-26-alpha
       
     working_directory: ~/repo
     steps:
       - checkout
 
-      - run: bundle install
+      #- run: bundle install
       
       
 workflows:
