--- a/.CircleCI/config.yml
+++ b/.CircleCI/config.yml
@@ -7,7 +7,7 @@ jobs:
   build: 
     docker:
       # specify the version you desire here
-      - image: circleci/android:api-26-alpha
+      - image: circleci/android:api-26-node8-alpha
       
     working_directory: ~/repo
     steps:
